--- a/index.html
+++ b/index.html
@@ -479,6 +479,7 @@
         </div>
     </div>
     <!-- end footer -->
+    <!-- Start copyright -->
     <div class="copyright">
         <div class="container">
             <div class="row">
@@ -505,33 +506,6 @@
         </div>
     </div>
 
-    <!-- start copright -->
-
-
-<div class="kolot">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                ksljfdkfld
-            </div>
-            <div class="col-md-6">
-                ksljfdkfld
-            </div>
-            <div class="col-md-6">
-                ksljfdkfld
-            </div>
-            <div class="col-md-6">
-                ksljfdkfld
-            </div>
-            <div class="col-md-6">
-                ksljfdkfld
-            </div>
-            <div class="col-md-6">
-                ksljfdkfld
-            </div>
-        </div>
-    </div>
-</div>
 
     <!-- end copright -->
     <script src="./js/jquery-3.5.1.min.js"></script>
